Correct alignment

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -133,12 +133,13 @@
         width: 100%;
         height: 80px;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
         letter-spacing: 1.5px;
         font-size: 95%;
         transition: opacity 0.2s linear;
         z-index: 6;
+        padding: 0 10vw;
 
         .home-footer-line-wrap {
             width: 25%;
